# uamyth_bot

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  Dockerfile  README.md  analysis.sh  docker-compose.yml  format.sh  git-lfs.sh  pyproject.toml
app/: .env  main.py  service-account.json
app/config/: env.py
configs/: logging.yaml
deploy/: values.yaml  values_local.yaml  values_production.yaml
static/quotes/: цитати великих письменників
